--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ img {
   position: absolute;
   right: -5rem;
   bottom: 2.5rem;
+  cursor: pointer !important;
 }
 
 .detail-container {
@@ -443,4 +444,39 @@ article,
 
 .article-container-a:hover {
   text-underline-offset: 0.4rem;
+}
+
+/* Projects Section */
+
+#projects {
+  position: relative;
+}
+
+.color-container {
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+}
+
+.project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+
+.project-title {
+  margin: 1rem;
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
+}
+
+.project-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
 }
