Mediaqueries and design updated

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  /* height: 96vh; */
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
@@ -336,6 +336,26 @@ img {
   padding-bottom: 0.25rem;
 }
 
+.education {
+  padding: 1.5rem;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+  width: 60%;
+}
+
+.experience {
+  padding: 1.5rem;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: justify;
+  width: 40%;
+}
+
 .college {
   border-bottom: 0.1rem solid;
   border-bottom-color: rgb(163, 163, 163);
@@ -404,7 +424,7 @@ img {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 article {
