--- a/style.css
+++ b/style.css
@@ -119,6 +119,8 @@ a:hover {
 }
 
 .menu-links.open {
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   max-height: 300px;
 }
 
@@ -359,15 +361,15 @@ img {
 .college {
   border-bottom: 0.1rem solid;
   border-bottom-color: rgb(163, 163, 163);
-  padding-bottom: 0.25rem;
+  padding-bottom: 0.5rem;
 }
 
 .school {
-  padding-top: 0.25rem;
+  padding-top: 1rem;
 }
 
 .education-details {
-  padding-top: 0.25rem;
+  padding-top: 1rem;
 }
 
 .education-detail {
@@ -397,6 +399,10 @@ img {
 .education-detail-details2 {
   padding-left: 1.2rem;
   font-weight: 400;
+}
+
+.text-container p {
+  padding-top: 1rem;
 }
 
 /* Experience Section */
