--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -31,6 +31,9 @@
 
     #hamburger-nav {
         display: flex;
+        width: 90%;
+        margin-left: 5%;
+        justify-content: space-between;
     }
 
     #experience,
@@ -78,10 +81,8 @@
         height: 14vh;
     }
 
-    #hamburger-nav {
-        width: 90%;
-        margin-left: 5%;
-        justify-content: space-between;
+    .menu-links a {
+        font-size: 1rem;
     }
 
     #contact,
@@ -171,7 +172,7 @@
     }
 
     .down-right-symbol {
-        font-size: 28px;
+        font-size: 1.5rem;
     }
 
     .education-detail-heading {
