--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
-  height: 96vh;
+  height: 96%;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
